--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,13 +1,12 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Decentrafit" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    <style name="Theme.Decentrafit" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="android:navigationBarColor">@color/white</item>
+        <item name="android:enforceNavigationBarContrast" tools:targetApi="Q">true</item>
+        <item name="android:statusBarColor">@android:color/black</item>
     </style>
 
-    <style name="Theme.Decentrafit" parent="Base.Theme.Decentrafit" />
-
-    <style name="Theme.Decentrafit.Starting" parent="Theme.SplashScreen">
+    <style name="Theme.App.SplashScreen" parent="Theme.SplashScreen">
         <!-- Set the splash screen background, animated icon, and animation
         duration. -->
         <item name="windowSplashScreenBackground">@color/red</item>
@@ -16,12 +15,9 @@
              drawable. One of these is required. -->
         <item name="windowSplashScreenAnimatedIcon">@drawable/baseline_airport_shuttle_24</item>
         <!-- Required for animated icons. -->
-        <item name="windowSplashScreenAnimationDuration">200</item>
 
         <!-- Set the theme of the Activity that directly follows your splash
         screen. This is required. -->
         <item name="postSplashScreenTheme">@style/Theme.Decentrafit</item>
     </style>
-
-
 </resources>
